added lessons table, updated top nav pages

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ highlighter: pygments
 title : Spatial Data Carpentry
 tagline: Teaching Spatial
 author :
-  name : Nathan Casler
+  name : Nathan Casler & Daniel Guaderrama
   email : npcasler@email.arizona.edu
 #  github : username
 #  twitter : username
